--- a/defaults.ini
+++ b/defaults.ini
@@ -4,7 +4,7 @@ scan time/ms = 2.5
 scan ignore/ms = 0.6
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
-rms length = 40
+RMS length = 40
 num of lasers = 3
 
 [Cavity]
