--- a/defaults.ini
+++ b/defaults.ini
@@ -23,7 +23,7 @@ kd on = True
 offset/V = 0.004
 limit/V = 0.01
 daq ai = Dev1/ai0
-daq do = Dev1/ao0
+daq ao = Dev1/ao0
 wavenumber/cm-1 = 15798
 
 [Laser0]
@@ -44,7 +44,7 @@ kd on = True
 offset/V = 0.004
 limit/V = 0.01
 daq ai = Dev1/ai1
-daq do = Dev1/ao1
+daq ao = Dev1/ao1
 wavenumber/cm-1 = 12807.6
 
 [Laser1]
@@ -65,7 +65,7 @@ kd on = True
 offset/V = 0.004
 limit/V = 0.01
 daq ai = Dev1/ai2
-daq do = Dev1/ao2
+daq ao = Dev1/ao2
 wavenumber/cm-1 = 12807.6
 
 [Laser2]
@@ -86,5 +86,5 @@ kd on = True
 offset/V = 0.004
 limit/V = 0.01
 daq ai = Dev1/ai3
-daq do = Dev1/ao3
+daq ao = Dev1/ao3
 wavenumber/cm-1 = 12807.6
