default setting update

--- a/defaults.ini
+++ b/defaults.ini
@@ -5,67 +5,67 @@ scan ignore/ms = 0.6
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
 RMS length = 40
-num of lasers = 1
+num of lasers = 2
 
 [Cavity]
-peak height/V = 4.6
+peak height/V = 0.15
 peak width/pts = 3
 set point/ms = 0.8
 kp multiplier = 1e-5
 kp = 35
-kp on = True
+kp on = False
 ki multiplier = 1e-3
 ki = 21
-ki on = True
+ki on = False
 kd multiplier = 1e-7
 kd = 12
-kd on = True
-offset/V = 0.004
-limit/V = 0.01
-daq ai = Dev1/ai0
-daq ao = Dev1/ao0
+kd on = False
+offset/V = -0.51
+limit/V = 0.1
+daq ai = Dev2/ai0
+daq ao = Dev2/ao0
 wavenumber/cm-1 = 15798
 
 [Laser0]
-label = 0
-peak height/V = 4.2
+label = Cy
+peak height/V = 0.1
 peak width/pts = 3
-local freq/MHz = 250
+local freq/MHz = 320
 freq source = local
 kp multiplier = 1e-5
-kp = 35
-kp on = True
+kp = 4
+kp on = False
 ki multiplier = 1e-3
-ki = 21
-ki on = True
+ki = 5
+ki on = False
 kd multiplier = 1e-7
-kd = 12
-kd on = True
-offset/V = 0.004
-limit/V = 0.01
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
+kd = 4
+kd on = False
+offset/V = 0.00
+limit/V = 0.1
+daq ai = Dev2/ai2
+daq ao = Dev2/ao2
 wavenumber/cm-1 = 12807.6
 
 [Laser1]
-label = 1
-peak height/V = 4.35
+label = Re
+peak height/V = 0.086
 peak width/pts = 3
 local freq/MHz = 256
-freq source = global
+freq source = local
 kp multiplier = 1e-5
-kp = 35
-kp on = True
+kp = 4
+kp on = False
 ki multiplier = 1e-3
-ki = 21
-ki on = True
+ki = 4
+ki on = False
 kd multiplier = 1e-7
-kd = 12
-kd on = True
-offset/V = 0.004
-limit/V = 0.01
-daq ai = Dev1/ai2
-daq ao = Dev1/ao2
+kd = 4
+kd on = False
+offset/V = 0.00
+limit/V = 0.1
+daq ai = Dev2/ai1
+daq ao = Dev2/ao1
 wavenumber/cm-1 = 12807.6
 
 [Laser2]
