daq task update

--- a/saved_settings/Rb_cavity_lock_setting.ini
+++ b/saved_settings/Rb_cavity_lock_setting.ini
@@ -5,10 +5,10 @@ scan ignore/ms = 0.6
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
 RMS length = 40
-num of lasers = 1
-counter = Dev1/ctr0
-counter PFI line = /Dev1/PFI12
-trigger = /Dev1/PFI8
+num of lasers = 2
+counter = Dev2/ctrl0
+counter PFI line = Dev2/PFI3
+trigger = Dev2/PFI0
 
 [Cavity]
 peak height/V = 0.15
@@ -25,8 +25,8 @@ kd = 12
 kd on = False
 offset/V = -0.51
 limit/V = 0.1
-daq ai = Dev1/ai0
-daq ao = Dev1/ao0
+daq ai = Dev2/ai0
+daq ao = Dev2/ao0
 wavenumber/cm-1 = 15798
 
 [Laser0]
@@ -46,8 +46,8 @@ kd = 4
 kd on = False
 offset/V = 0.00
 limit/V = 0.1
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
+daq ai = Dev2/ai2
+daq ao = Dev2/ao2
 wavenumber/cm-1 = 12807.6
 
 [Laser1]
@@ -67,27 +67,6 @@ kd = 4
 kd on = False
 offset/V = 0.00
 limit/V = 0.1
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
-wavenumber/cm-1 = 12807.6
-
-[Laser2]
-label = 2
-peak height/V = 4.6
-peak width/pts = 3
-local freq/MHz = 20
-freq source = local
-kp multiplier = 1e-5
-kp = 35
-kp on = True
-ki multiplier = 1e-3
-ki = 21
-ki on = True
-kd multiplier = 1e-7
-kd = 12
-kd on = True
-offset/V = 0.004
-limit/V = 0.01
-daq ai = Dev1/ai3
-daq ao = Dev1/ao3
+daq ai = Dev2/ai1
+daq ao = Dev2/ao1
 wavenumber/cm-1 = 12807.6
