daq task update

--- a/saved_settings/Rb_cavity_lock_setting.ini
+++ b/saved_settings/Rb_cavity_lock_setting.ini
@@ -6,9 +6,9 @@ cavity FSR/MHz = 500
 lock criteria/MHz = 5
 RMS length = 40
 num of lasers = 2
-counter = Dev2/ctrl0
-counter PFI line = Dev2/PFI3
-trigger = Dev2/PFI0
+counter = Dev2/ctr0
+counter PFI line = /Dev2/PFI12
+trigger = /Dev2/PFI8
 
 [Cavity]
 peak height/V = 0.15
