--- a/saved_settings/Rb_cavity_lock_setting.ini
+++ b/saved_settings/Rb_cavity_lock_setting.ini
@@ -2,17 +2,19 @@
 scan amp/V = 4.35
 scan time/ms = 2.5
 scan ignore/ms = 0.6
+sampling rate = 384000
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
-RMS length = 40
-num of lasers = 2
-counter = Dev2/ctr1
+RMS length = 1000
+display per = 10
+counter channel= Dev2/ctr1
 counter PFI line = /Dev2/PFI13
-trigger = /Dev2/PFI8
+trigger channel = /Dev2/PFI8
+num of lasers = 2
 
 [Cavity]
 peak height/V = 0.15
-peak width/pts = 3
+peak width/pts = 1
 set point/ms = 0.8
 kp multiplier = 1e-5
 kp = 35
@@ -23,7 +25,7 @@ ki on = False
 kd multiplier = 1e-7
 kd = 12
 kd on = False
-offset/V = -0.51
+offset/V = 0.2
 limit/V = 0.1
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
