--- a/saved_settings/Rb_cavity_lock_setting.ini
+++ b/saved_settings/Rb_cavity_lock_setting.ini
@@ -10,6 +10,8 @@ display per = 10
 counter channel= Dev2/ctr1
 counter PFI line = /Dev2/PFI13
 trigger channel = /Dev2/PFI8
+host address = 172.28.174.240
+port = 65534
 num of lasers = 2
 
 [Cavity]
