--- a/setting_example.ini
+++ b/setting_example.ini
@@ -2,17 +2,21 @@
 scan amp/V = 4.35
 scan time/ms = 2.5
 scan ignore/ms = 0.6
+sampling rate = 384000
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
-RMS length = 40
-num of lasers = 1
-counter = Dev1/ctr0
-counter PFI line = /Dev1/PFI12
-trigger = /Dev1/PFI8
+RMS length = 100
+display per = 10
+counter channel= Dev2/ctr1
+counter PFI line = /Dev2/PFI13
+trigger channel = /Dev2/PFI8
+host address = 127.0.0.1
+port = 10000
+num of lasers = 2
 
 [Cavity]
 peak height/V = 0.15
-peak width/pts = 3
+peak width/pts = 1
 set point/ms = 0.8
 kp multiplier = 1e-5
 kp = 35
@@ -23,16 +27,16 @@ ki on = False
 kd multiplier = 1e-7
 kd = 12
 kd on = False
-offset/V = -0.51
-limit/V = 0.1
-daq ai = Dev1/ai0
-daq ao = Dev1/ao0
+offset/V = 0.2
+limit/V = 0.05
+daq ai = Dev2/ai0
+daq ao = Dev2/ao0
 wavenumber/cm-1 = 15798
 
 [Laser0]
 label = Cy
-peak height/V = 0.1
-peak width/pts = 3
+peak height/V = 0.15
+peak width/pts = 1
 local freq/MHz = 320
 freq source = local
 kp multiplier = 1e-5
@@ -45,15 +49,15 @@ kd multiplier = 1e-7
 kd = 4
 kd on = False
 offset/V = 0.00
-limit/V = 0.1
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
+limit/V = 0.05
+daq ai = Dev2/ai2
+daq ao = Dev2/ao2
 wavenumber/cm-1 = 12807.6
 
 [Laser1]
 label = Re
 peak height/V = 0.086
-peak width/pts = 3
+peak width/pts = 1
 local freq/MHz = 256
 freq source = local
 kp multiplier = 1e-5
@@ -66,28 +70,7 @@ kd multiplier = 1e-7
 kd = 4
 kd on = False
 offset/V = 0.00
-limit/V = 0.1
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
-wavenumber/cm-1 = 12807.6
-
-[Laser2]
-label = 2
-peak height/V = 4.6
-peak width/pts = 3
-local freq/MHz = 20
-freq source = local
-kp multiplier = 1e-5
-kp = 35
-kp on = True
-ki multiplier = 1e-3
-ki = 21
-ki on = True
-kd multiplier = 1e-7
-kd = 12
-kd on = True
-offset/V = 0.004
-limit/V = 0.01
-daq ai = Dev1/ai3
-daq ao = Dev1/ao3
+limit/V = 0.05
+daq ai = Dev2/ai1
+daq ao = Dev2/ao1
 wavenumber/cm-1 = 12807.6
