--- a/setting_example.ini
+++ b/setting_example.ini
@@ -1,18 +1,19 @@
 [Setting]
 scan amp/V = 4.35
 scan time/ms = 2.5
-scan ignore/ms = 0.6
+scan ignore/ms = 0.76
 sampling rate = 384000
 cavity FSR/MHz = 500
 lock criteria/MHz = 5
 RMS length = 100
-display per = 10
+display per = 20
 counter channel= Dev2/ctr1
 counter PFI line = /Dev2/PFI13
 trigger channel = /Dev2/PFI8
 host address = 127.0.0.1
-port = 10000
+port = 65534
 num of lasers = 2
+hdf_filename = logging\logging
 
 [Cavity]
 peak height/V = 0.15
@@ -27,7 +28,7 @@ ki on = False
 kd multiplier = 1e-7
 kd = 12
 kd on = False
-offset/V = 0.2
+offset/V = 0
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
@@ -37,16 +38,17 @@ wavenumber/cm-1 = 15798
 label = Cy
 peak height/V = 0.15
 peak width/pts = 1
-local freq/MHz = 320
+local freq 0/MHz = 233
+local freq 1/MHz = 36
 freq source = local
 kp multiplier = 1e-5
-kp = 4
+kp = 8
 kp on = False
 ki multiplier = 1e-3
-ki = 5
+ki = 10
 ki on = False
 kd multiplier = 1e-7
-kd = 4
+kd = 0
 kd on = False
 offset/V = 0.00
 limit/V = 0.05
@@ -58,16 +60,17 @@ wavenumber/cm-1 = 12807.6
 label = Re
 peak height/V = 0.086
 peak width/pts = 1
-local freq/MHz = 256
+local freq 0/MHz = 311
+local freq 1/MHz = 311
 freq source = local
 kp multiplier = 1e-5
-kp = 4
+kp = 8
 kp on = False
 ki multiplier = 1e-3
-ki = 4
+ki = 10
 ki on = False
 kd multiplier = 1e-7
-kd = 4
+kd = 0
 kd on = False
 offset/V = 0.00
 limit/V = 0.05
