baseline removal, multirun average

--- a/saved_settings/cavity_lock_setting.ini
+++ b/saved_settings/cavity_lock_setting.ini
@@ -7,17 +7,17 @@ cavity FSR/MHz = 500
 lock criteria/MHz = 5
 RMS length = 100
 display per = 20
-counter channel= Dev1/ctr1
-counter PFI line = /Dev1/PFI13
-trigger channel = /Dev1/PFI8
+counter channel= Dev4/ctr1
+counter PFI line = /Dev4/PFI13
+trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
 host address = None
 port = 65534
-num of lasers = 2
+num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev1-Cavity-Lock
+window title = Dev4-Cavity-Lock
 color list = #c65027, #008080, #8e8538
-average = 3
+average = 1
 baseline remove = True
 
 [Cavity]
@@ -35,8 +35,8 @@ kd = 12
 kd on = False
 offset/V = 0
 limit/V = 0.05
-daq ai = Dev1/ai0
-daq ao = Dev1/ao0
+daq ai = Dev4/ai0
+daq ao = Dev4/ao0
 wavenumber/cm-1 = 15798
 
 [Laser0]
@@ -56,8 +56,8 @@ kd = 4
 kd on = False
 offset/V = 0.00
 limit/V = 0.05
-daq ai = Dev1/ai2
-daq ao = Dev1/ao2
+daq ai = Dev4/ai1
+daq ao = Dev4/ao1
 wavenumber/cm-1 = 12807.6
 
 [Laser1]
@@ -77,6 +77,27 @@ kd = 4
 kd on = False
 offset/V = 0.00
 limit/V = 0.05
-daq ai = Dev1/ai1
-daq ao = Dev1/ao1
+daq ai = Dev4/ai2
+daq ao = Dev4/ao2
+wavenumber/cm-1 = 12807.6
+
+[Laser2]
+label = Re
+peak height/V = 0.15
+peak width/pts = 1
+local freq/MHz = 244
+freq source = local
+kp multiplier = 1e-5
+kp = 8
+kp on = False
+ki multiplier = 1e-3
+ki = 10
+ki on = False
+kd multiplier = 1e-7
+kd = 4
+kd on = False
+offset/V = 0.00
+limit/V = 0.05
+daq ai = Dev4/ai3
+daq ao = Dev4/ao3
 wavenumber/cm-1 = 12807.6
