--- a/saved_settings/cavity_lock_setting_20220510_154657.ini
+++ b/saved_settings/cavity_lock_setting_20220510_154657.ini
@@ -3,7 +3,7 @@ scan amp/V = 4.35
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
-cavity FSR/MHz = 750.0
+cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
@@ -11,7 +11,7 @@ counter channel = Dev2/ctr1
 counter PFI line = /Dev2/PFI13
 trigger channel = /Dev2/PFI8
 # host address can be None or a valid address
-host address = 128.135.127.189
+host address = None
 port = 65532
 num of lasers = 3
 hdf_filename = logging\logging
@@ -23,13 +23,16 @@ baseline remove = True
 [Cavity]
 peak height/V = 0.15
 peak width/pts = 1
-kp = 0.00035
+kp multiplier = 1e-05
+kp = 35.0
 kp on = True
-ki = 0.021
+ki multiplier = 0.001
+ki = 21.0
 ki on = True
-kd = 1.2e-06
+kd multiplier = 1e-07
+kd = 12.0
 kd on = False
-offset/V = 0.19999999999999962
+offset/V = 0.47000000000000025
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
@@ -37,56 +40,65 @@ wavenumber/cm-1 = 15798.0
 set point/ms = 0.89
 
 [Laser0]
-peak height/V = 0.09
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8e-05
+kp multiplier = 1e-05
+kp = 8.0
 kp on = False
-ki = 0.01
+ki multiplier = 0.001
+ki = 10.0
 ki on = False
-kd = 4e-07
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev2/ai1
 daq ao = Dev2/ao1
 wavenumber/cm-1 = 15083.0
-label = v00m
-local freq/MHz = 550.0
+label = Cy
+local freq/MHz = 229.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.11
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8e-05
+kp multiplier = 1e-05
+kp = 8.0
 kp on = False
-ki = 0.01
+ki multiplier = 0.001
+ki = 10.0
 ki on = False
-kd = 4e-07
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev2/ai2
 daq ao = Dev2/ao2
 wavenumber/cm-1 = 14598.0
-label = v10m
-local freq/MHz = 660.0
+label = Re
+local freq/MHz = 244.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.05
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8e-05
+kp multiplier = 1e-05
+kp = 8.0
 kp on = False
-ki = 0.01
+ki multiplier = 0.001
+ki = 10.0
 ki on = False
-kd = 4e-07
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev2/ai3
 daq ao = Dev2/ao3
 wavenumber/cm-1 = 14598.0
-label = v21s/m
-local freq/MHz = 360.0
+label = Re
+local freq/MHz = 244.0
 freq source = local
 
