--- a/saved_settings/cavity_lock_setting.ini
+++ b/saved_settings/cavity_lock_setting.ini
@@ -3,90 +3,90 @@ scan amp/V = 4.35
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
-cavity FSR/MHz = 750.0
+cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev2/ctr1
-counter PFI line = /Dev2/PFI13
-trigger channel = /Dev2/PFI8
+counter channel = Dev3/ctr1
+counter PFI line = /Dev3/PFI13
+trigger channel = /Dev3/PFI8
 # host address can be None or a valid address
-host address = 128.135.127.189
-port = 65532
+host address = None
+port = 65533
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev2-Cavity-Lock
+window title = Dev3-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.15
+peak height/V = 0.060000000000000005
 peak width/pts = 1
-kp = 35.0e-5
+kp = 35.0e-05
 kp on = False
 ki = 21.0e-3
 ki on = False
-kd = 12.0e-7
+kd = 12.0e-07
 kd on = False
-offset/V = 0.78
+offset/V = 0.7400000000000004
 limit/V = 0.05
-daq ai = Dev2/ai0
-daq ao = Dev2/ao0
+daq ai = Dev3/ai0
+daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.89
+set point/ms = 0.9000000000000001
 
 [Laser0]
-peak height/V = 0.09
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8.0e-05
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-7
+kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai1
-daq ao = Dev2/ao1
-wavenumber/cm-1 = 15083.0
-label = v00m
-local freq/MHz = 550.0
+daq ai = Dev3/ai1
+daq ao = Dev3/ao1
+wavenumber/cm-1 = 15007.6
+label = v00N3
+local freq/MHz = 229.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.11
+peak height/V = 0.05
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8.0e-05
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-7
+kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai2
-daq ao = Dev2/ao2
+daq ai = Dev3/ai2
+daq ao = Dev3/ao2
 wavenumber/cm-1 = 14598.0
-label = v10m
-local freq/MHz = 660.0
+label = v32m
+local freq/MHz = 270.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.05
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8.0e-05
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-7
+kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai3
-daq ao = Dev2/ao3
+daq ai = Dev3/ai3
+daq ao = Dev3/ao3
 wavenumber/cm-1 = 14598.0
-label = v21s/m
-local freq/MHz = 360.0
+label = v00N2
+local freq/MHz = 244.0
 freq source = local
 
