--- a/saved_settings/cavity_lock_setting_20220124_183750.ini
+++ b/saved_settings/cavity_lock_setting_20220124_183750.ini
@@ -7,15 +7,15 @@ cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev2/ctr1
-counter PFI line = /Dev2/PFI13
-trigger channel = /Dev2/PFI8
+counter channel = Dev3/ctr1
+counter PFI line = /Dev3/PFI13
+trigger channel = /Dev3/PFI8
 # host address can be None or a valid address
 host address = None
-port = 65532
+port = 65533
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev2-Cavity-Lock
+window title = Dev3-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
@@ -34,34 +34,34 @@ kd = 12.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai0
-daq ao = Dev2/ao0
+daq ai = Dev3/ai0
+daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.9000000000000001
+set point/ms = 0.8600000000000001
 
 [Laser0]
-peak height/V = 0.05
+peak height/V = 0.060000000000000005
 peak width/pts = 1
 kp multiplier = 1e-05
-kp = 8.0
+kp = -8.0
 kp on = True
 ki multiplier = 0.001
-ki = 10.0
+ki = -10.0
 ki on = True
 kd multiplier = 1e-07
 kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai1
-daq ao = Dev2/ao1
-wavenumber/cm-1 = 15075.7
-label = 9 v00m
+daq ai = Dev3/ai1
+daq ao = Dev3/ao1
+wavenumber/cm-1 = 15073.7
+label = 2 v00N3
 local freq/MHz = 229.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.05
+peak height/V = 0.08
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 8.0
@@ -74,10 +74,10 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai2
-daq ao = Dev2/ao2
-wavenumber/cm-1 = 14578.1
-label = 10 v10m
+daq ai = Dev3/ai2
+daq ao = Dev3/ao2
+wavenumber/cm-1 = 14601.6
+label = 12 v32m
 local freq/MHz = 244.0
 freq source = local
 
@@ -95,10 +95,10 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai3
-daq ao = Dev2/ao3
-wavenumber/cm-1 = 14589.9
-label = 11 v21m
-local freq/MHz = 244.0
+daq ai = Dev3/ai3
+daq ao = Dev3/ao3
+wavenumber/cm-1 = 15074.5
+label = 13 v00N2
+local freq/MHz = 271.0
 freq source = local
 
