--- a/saved_settings/cavity_lock_setting_20220523_145659.ini
+++ b/saved_settings/cavity_lock_setting_20220523_145659.ini
@@ -3,25 +3,25 @@ scan amp/V = 4.35
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
-cavity FSR/MHz = 750.0
+cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev2/ctr1
-counter PFI line = /Dev2/PFI13
-trigger channel = /Dev2/PFI8
+counter channel = Dev3/ctr1
+counter PFI line = /Dev3/PFI13
+trigger channel = /Dev3/PFI8
 # host address can be None or a valid address
 host address = None
-port = 65532
+port = 65533
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev2-Cavity-Lock
+window title = Dev3-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.15
+peak height/V = 0.060000000000000005
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 35.0
@@ -32,15 +32,15 @@ ki on = True
 kd multiplier = 1e-07
 kd = 12.0
 kd on = False
-offset/V = 0.47000000000000025
+offset/V = 0.7400000000000004
 limit/V = 0.05
-daq ai = Dev2/ai0
-daq ao = Dev2/ao0
+daq ai = Dev3/ai0
+daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.89
+set point/ms = 0.9000000000000001
 
 [Laser0]
-peak height/V = 0.09999999999999999
+peak height/V = 0.15
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 8.0
@@ -53,15 +53,15 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai1
-daq ao = Dev2/ao1
-wavenumber/cm-1 = 15083.0
+daq ai = Dev3/ai1
+daq ao = Dev3/ao1
+wavenumber/cm-1 = 15007.6
 label = Cy
-local freq/MHz = 200.0
+local freq/MHz = 229.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.15
+peak height/V = 0.05
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 8.0
@@ -74,11 +74,11 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai2
-daq ao = Dev2/ao2
+daq ai = Dev3/ai2
+daq ao = Dev3/ao2
 wavenumber/cm-1 = 14598.0
 label = Re
-local freq/MHz = 75.0
+local freq/MHz = 270.0
 freq source = local
 
 [Laser2]
@@ -95,9 +95,9 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev2/ai3
-daq ao = Dev2/ao3
-wavenumber/cm-1 = 14598.0
+daq ai = Dev3/ai3
+daq ao = Dev3/ao3
+wavenumber/cm-1 = 12807.6
 label = Re
 local freq/MHz = 244.0
 freq source = local
