--- a/saved_settings/cavity_lock_setting.ini
+++ b/saved_settings/cavity_lock_setting.ini
@@ -1,27 +1,27 @@
 [Setting]
-scan amp/V = 4.35
+scan amp/V = 5.0
 scan time/ms = 2.5
-scan ignore/ms = 0.76
+scan ignore/ms = 1.3
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev3/ctr1
-counter PFI line = /Dev3/PFI13
-trigger channel = /Dev3/PFI8
+counter channel = Dev4/ctr1
+counter PFI line = /Dev4/PFI13
+trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
 host address = None
-port = 65533
+port = 65534
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev3-Cavity-Lock
+window title = Dev4-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.060000000000000005
+peak height/V = 0.01
 peak width/pts = 1
 kp = 35.0e-05
 kp on = False
@@ -29,15 +29,15 @@ ki = 21.0e-3
 ki on = False
 kd = 12.0e-07
 kd on = False
-offset/V = 0.7400000000000004
+offset/V = 0.12000000000000001
 limit/V = 0.05
-daq ai = Dev3/ai0
-daq ao = Dev3/ao0
+daq ai = Dev4/ai0
+daq ao = Dev4/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.9000000000000001
+set point/ms = 1.45
 
 [Laser0]
-peak height/V = 0.15
+peak height/V = 0.01
 peak width/pts = 1
 kp = 8.0e-05
 kp on = False
@@ -47,15 +47,15 @@ kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai1
-daq ao = Dev3/ao1
-wavenumber/cm-1 = 15007.6
-label = v00N3
-local freq/MHz = 229.5
+daq ai = Dev4/ai2
+daq ao = Dev4/ao1
+wavenumber/cm-1 = 15083.0
+label = v00s
+local freq/MHz = 459.0
 freq source = local
 
 [Laser1]
-peak height/V = 0.05
+peak height/V = 0.01
 peak width/pts = 1
 kp = 8.0e-05
 kp on = False
@@ -65,15 +65,15 @@ kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai2
-daq ao = Dev3/ao2
+daq ai = Dev4/ai4
+daq ao = Dev4/ao2
 wavenumber/cm-1 = 14598.0
-label = v32m
-local freq/MHz = 270.0
+label = v10s
+local freq/MHz = 230.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.15
+peak height/V = 0.01
 peak width/pts = 1
 kp = 8.0e-05
 kp on = False
@@ -83,10 +83,10 @@ kd = 4.0e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai3
-daq ao = Dev3/ao3
-wavenumber/cm-1 = 14598.0
-label = v00N2
-local freq/MHz = 244.0
+daq ai = Dev4/ai6
+daq ao = Dev4/ao3
+wavenumber/cm-1 = 15083.0
+label = absorp
+local freq/MHz = 60.0
 freq source = local
 
