--- a/saved_settings/cavity_lock_setting_20220124_174148.ini
+++ b/saved_settings/cavity_lock_setting_20220124_174148.ini
@@ -6,7 +6,7 @@ sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
-display per = 20
+display per = 5
 counter channel = Dev4/ctr1
 counter PFI line = /Dev4/PFI13
 trigger channel = /Dev4/PFI8
@@ -17,76 +17,88 @@ num of lasers = 3
 hdf_filename = logging\logging
 window title = Dev4-Cavity-Lock
 color list = #c65027, #008080, #8e8538
-average = 1
+average = 5
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.003
 peak width/pts = 1
-kp = 0.00035
-kp on = False
-ki = 0.021
-ki on = False
-kd = 1.2e-06
+kp multiplier = 1e-05
+kp = 35.0
+kp on = True
+ki multiplier = 0.001
+ki = 21.0
+ki on = True
+kd multiplier = 1e-07
+kd = 12.0
 kd on = False
-offset/V = 0.12
+offset/V = 0.5900000000000003
 limit/V = 0.05
 daq ai = Dev4/ai0
 daq ao = Dev4/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 1.45
+set point/ms = 1.48
 
 [Laser0]
-peak height/V = 0.01
+peak height/V = 0.013
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp multiplier = 1e-05
+kp = 8.0
+kp on = True
+ki multiplier = 0.001
+ki = 10.0
+ki on = True
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai2
 daq ao = Dev4/ao1
-wavenumber/cm-1 = 15083.0
-label = v00s
-local freq/MHz = 459.0
+wavenumber/cm-1 = 12807.6
+label = 6 v00s
+local freq/MHz = 229.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.01
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8e-05
+kp multiplier = 1e-05
+kp = 8.0
 kp on = False
-ki = 0.01
+ki multiplier = 0.001
+ki = 10.0
 ki on = False
-kd = 4e-07
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai4
 daq ao = Dev4/ao2
-wavenumber/cm-1 = 14598.0
-label = v10s
-local freq/MHz = 230.0
+wavenumber/cm-1 = 12807.6
+label = 3 v10s
+local freq/MHz = 244.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.01
+peak height/V = 0.15
 peak width/pts = 1
-kp = 8e-05
+kp multiplier = 1e-05
+kp = 8.0
 kp on = False
-ki = 0.01
+ki multiplier = 0.001
+ki = 10.0
 ki on = False
-kd = 4e-07
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai6
 daq ao = Dev4/ao3
-wavenumber/cm-1 = 15083.0
-label = absorp
-local freq/MHz = 60.0
+wavenumber/cm-1 = 12807.6
+label = 14 absorp
+local freq/MHz = 244.0
 freq source = local
 
