--- a/saved_settings/cavity_lock_setting_20220124_183745.ini
+++ b/saved_settings/cavity_lock_setting_20220124_183745.ini
@@ -1,62 +1,62 @@
 [Setting]
-scan amp/V = 4.35
+scan amp/V = 5.0
 scan time/ms = 2.5
-scan ignore/ms = 0.76
+scan ignore/ms = 1.3
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
-display per = 20
-counter channel = Dev3/ctr1
-counter PFI line = /Dev3/PFI13
-trigger channel = /Dev3/PFI8
+display per = 5
+counter channel = Dev4/ctr1
+counter PFI line = /Dev4/PFI13
+trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
 host address = None
-port = 65533
+port = 65534
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev3-Cavity-Lock
+window title = Dev4-Cavity-Lock
 color list = #c65027, #008080, #8e8538
-average = 1
+average = 5
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.15
+peak height/V = 0.003
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 35.0
-kp on = False
+kp on = True
 ki multiplier = 0.001
 ki = 21.0
-ki on = False
+ki on = True
 kd multiplier = 1e-07
 kd = 12.0
 kd on = False
-offset/V = 0.0
+offset/V = 0.5900000000000003
 limit/V = 0.05
-daq ai = Dev3/ai0
-daq ao = Dev3/ao0
+daq ai = Dev4/ai0
+daq ao = Dev4/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.8
+set point/ms = 1.48
 
 [Laser0]
-peak height/V = 0.15
+peak height/V = 0.013
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 8.0
-kp on = False
+kp on = True
 ki multiplier = 0.001
 ki = 10.0
-ki on = False
+ki on = True
 kd multiplier = 1e-07
 kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai1
-daq ao = Dev3/ao1
-wavenumber/cm-1 = 15007.6
-label = Cy
+daq ai = Dev4/ai2
+daq ao = Dev4/ao1
+wavenumber/cm-1 = 15075.7
+label = 6 v00s
 local freq/MHz = 229.5
 freq source = local
 
@@ -74,10 +74,10 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai2
-daq ao = Dev3/ao2
-wavenumber/cm-1 = 14598.0
-label = Re
+daq ai = Dev4/ai4
+daq ao = Dev4/ao2
+wavenumber/cm-1 = 14578.1
+label = 3 v10s
 local freq/MHz = 244.0
 freq source = local
 
@@ -95,10 +95,10 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai3
-daq ao = Dev3/ao3
-wavenumber/cm-1 = 12807.6
-label = Re
+daq ai = Dev4/ai6
+daq ao = Dev4/ao3
+wavenumber/cm-1 = 15076.0
+label = 14 absorp
 local freq/MHz = 244.0
 freq source = local
 
