--- a/saved_settings/cavity_lock_setting_20220509_151858.ini
+++ b/saved_settings/cavity_lock_setting_20220509_151858.ini
@@ -1,27 +1,27 @@
 [Setting]
-scan amp/V = 4.35
+scan amp/V = 5.0
 scan time/ms = 2.5
-scan ignore/ms = 0.76
+scan ignore/ms = 1.3
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev3/ctr1
-counter PFI line = /Dev3/PFI13
-trigger channel = /Dev3/PFI8
+counter channel = Dev4/ctr1
+counter PFI line = /Dev4/PFI13
+trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
 host address = None
-port = 65533
+port = 65534
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev3-Cavity-Lock
+window title = Dev4-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.11999999999999998
+peak height/V = 0.01
 peak width/pts = 1
 kp multiplier = 1e-05
 kp = 35.0
@@ -32,56 +32,14 @@ ki on = True
 kd multiplier = 1e-07
 kd = 12.0
 kd on = False
-offset/V = 0.0
+offset/V = -0.3000000000000001
 limit/V = 0.05
-daq ai = Dev3/ai0
-daq ao = Dev3/ao0
+daq ai = Dev4/ai0
+daq ao = Dev4/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.8600000000000001
+set point/ms = 1.4500000000000002
 
 [Laser0]
-peak height/V = 0.060000000000000005
-peak width/pts = 1
-kp multiplier = 1e-05
-kp = -8.0
-kp on = True
-ki multiplier = 0.001
-ki = -10.0
-ki on = True
-kd multiplier = 1e-07
-kd = 4.0
-kd on = False
-offset/V = 0.0
-limit/V = 0.05
-daq ai = Dev3/ai1
-daq ao = Dev3/ao1
-wavenumber/cm-1 = 12807.6
-label = 2 v00N3
-local freq/MHz = 229.5
-freq source = local
-
-[Laser1]
-peak height/V = 0.08
-peak width/pts = 1
-kp multiplier = 1e-05
-kp = 8.0
-kp on = True
-ki multiplier = 0.001
-ki = 10.0
-ki on = True
-kd multiplier = 1e-07
-kd = 4.0
-kd on = False
-offset/V = 0.0
-limit/V = 0.05
-daq ai = Dev3/ai2
-daq ao = Dev3/ao2
-wavenumber/cm-1 = 12807.6
-label = 12 v32m
-local freq/MHz = 244.0
-freq source = local
-
-[Laser2]
 peak height/V = 0.15
 peak width/pts = 1
 kp multiplier = 1e-05
@@ -95,10 +53,52 @@ kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev3/ai3
-daq ao = Dev3/ao3
+daq ai = Dev4/ai2
+daq ao = Dev4/ao1
 wavenumber/cm-1 = 12807.6
-label = 13 v00N2
-local freq/MHz = 271.0
+label = Cy
+local freq/MHz = 229.5
+freq source = local
+
+[Laser1]
+peak height/V = 0.15
+peak width/pts = 1
+kp multiplier = 1e-05
+kp = 8.0
+kp on = False
+ki multiplier = 0.001
+ki = 10.0
+ki on = False
+kd multiplier = 1e-07
+kd = 4.0
+kd on = False
+offset/V = 0.0
+limit/V = 0.05
+daq ai = Dev4/ai4
+daq ao = Dev4/ao2
+wavenumber/cm-1 = 12807.6
+label = Re
+local freq/MHz = 244.0
+freq source = local
+
+[Laser2]
+peak height/V = 0.019999999999999997
+peak width/pts = 1
+kp multiplier = 1e-05
+kp = 8.0
+kp on = False
+ki multiplier = 0.001
+ki = 10.0
+ki on = False
+kd multiplier = 1e-07
+kd = 4.0
+kd on = False
+offset/V = 0.0
+limit/V = 0.05
+daq ai = Dev4/ai6
+daq ao = Dev4/ao3
+wavenumber/cm-1 = 12807.6
+label = Re
+local freq/MHz = 40.0
 freq source = local
 
