--- a/saved_settings/cavity_lock_setting_20220607_091337.ini
+++ b/saved_settings/cavity_lock_setting_20220607_091337.ini
@@ -11,7 +11,7 @@ counter channel = Dev4/ctr1
 counter PFI line = /Dev4/PFI13
 trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
-host address = None
+host address = 128.135.127.189
 port = 65534
 num of lasers = 3
 hdf_filename = logging\logging
@@ -23,13 +23,16 @@ baseline remove = True
 [Cavity]
 peak height/V = 0.01
 peak width/pts = 1
-kp = 0.00035
-kp on = False
-ki = 0.021
-ki on = False
-kd = 1.2e-06
+kp multiplier = 1e-05
+kp = 35.0
+kp on = True
+ki multiplier = 0.001
+ki = 21.0
+ki on = True
+kd multiplier = 1e-07
+kd = 12.0
 kd on = False
-offset/V = 0.12
+offset/V = 0.12000000000000001
 limit/V = 0.05
 daq ai = Dev4/ai0
 daq ao = Dev4/ao0
@@ -39,54 +42,63 @@ set point/ms = 1.45
 [Laser0]
 peak height/V = 0.01
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp multiplier = 1e-05
+kp = 8.0
+kp on = True
+ki multiplier = 0.001
+ki = 10.0
+ki on = True
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai2
 daq ao = Dev4/ao1
 wavenumber/cm-1 = 15083.0
-label = v00s
+label = Cy
 local freq/MHz = 459.0
 freq source = local
 
 [Laser1]
 peak height/V = 0.01
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp multiplier = 1e-05
+kp = 8.0
+kp on = True
+ki multiplier = 0.001
+ki = 10.0
+ki on = True
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai4
 daq ao = Dev4/ao2
 wavenumber/cm-1 = 14598.0
-label = v10s
+label = Re
 local freq/MHz = 230.0
 freq source = local
 
 [Laser2]
 peak height/V = 0.01
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp multiplier = 1e-05
+kp = 8.0
+kp on = True
+ki multiplier = 0.001
+ki = 10.0
+ki on = True
+kd multiplier = 1e-07
+kd = 4.0
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev4/ai6
 daq ao = Dev4/ao3
 wavenumber/cm-1 = 15083.0
-label = absorp
+label = Re
 local freq/MHz = 60.0
 freq source = local
 
