--- a/saved_settings/cavity_lock_setting.ini
+++ b/saved_settings/cavity_lock_setting.ini
@@ -11,7 +11,7 @@ counter channel = Dev2/ctr1
 counter PFI line = /Dev2/PFI13
 trigger channel = /Dev2/PFI8
 # host address can be None or a valid address
-host address = 128.135.127.189
+host address = None
 port = 65532
 num of lasers = 3
 hdf_filename = logging\logging
