--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -11,7 +11,7 @@ counter channel = Dev2/ctr1
 counter PFI line = /Dev2/PFI13
 trigger channel = /Dev2/PFI8
 # host address can be None or a valid address
-host address = None
+host address = 128.135.127.189
 port = 65532
 num of lasers = 3
 hdf_filename = logging\logging
@@ -29,7 +29,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.19999999999999962
+offset/V = 0.2
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
