--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -11,7 +11,7 @@ counter channel = Dev4/ctr1
 counter PFI line = /Dev4/PFI13
 trigger channel = /Dev4/PFI8
 # host address can be None or a valid address
-host address = None
+host address = 128.135.127.189
 port = 65534
 num of lasers = 3
 hdf_filename = logging\logging
