--- a/saved_settings/cavity_lock_setting.ini
+++ b/saved_settings/cavity_lock_setting.ini
@@ -1,92 +1,92 @@
 [Setting]
-scan amp/V = 5.0
+scan amp/V = 4.35
 scan time/ms = 2.5
-scan ignore/ms = 1.3
+scan ignore/ms = 0.76
 sampling rate = 384000
-cavity FSR/MHz = 500.0
+cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev4/ctr1
-counter PFI line = /Dev4/PFI13
-trigger channel = /Dev4/PFI8
+counter channel = Dev2/ctr1
+counter PFI line = /Dev2/PFI13
+trigger channel = /Dev2/PFI8
 # host address can be None or a valid address
 host address = 128.135.127.189
-port = 65534
+port = 65532
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev4-Cavity-Lock
+window title = Dev2-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.15
 peak width/pts = 1
-kp = 35.0e-05
+kp = 35.0e-5
 kp on = False
 ki = 21.0e-3
 ki on = False
-kd = 12.0e-07
+kd = 12.0e-7
 kd on = False
-offset/V = 0.12000000000000001
+offset/V = 0.78
 limit/V = 0.05
-daq ai = Dev4/ai0
-daq ao = Dev4/ao0
+daq ai = Dev2/ai0
+daq ao = Dev2/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 1.45
+set point/ms = 0.89
 
 [Laser0]
-peak height/V = 0.01
+peak height/V = 0.09
 peak width/pts = 1
-kp = 8.0e-05
+kp = 8.0e-5
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-07
+kd = 4.0e-7
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev4/ai2
-daq ao = Dev4/ao1
+daq ai = Dev2/ai1
+daq ao = Dev2/ao1
 wavenumber/cm-1 = 15083.0
-label = v00s
-local freq/MHz = 459.0
+label = v00m
+local freq/MHz = 550.0
 freq source = local
 
 [Laser1]
-peak height/V = 0.01
+peak height/V = 0.11
 peak width/pts = 1
-kp = 8.0e-05
+kp = 8.0e-5
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-07
+kd = 4.0e-7
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev4/ai4
-daq ao = Dev4/ao2
+daq ai = Dev2/ai2
+daq ao = Dev2/ao2
 wavenumber/cm-1 = 14598.0
-label = v10s
-local freq/MHz = 230.0
+label = v10m
+local freq/MHz = 660.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.01
+peak height/V = 0.05
 peak width/pts = 1
-kp = 8.0e-05
+kp = 8.0e-5
 kp on = False
 ki = 10.0e-3
 ki on = False
-kd = 4.0e-07
+kd = 4.0e-7
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev4/ai6
-daq ao = Dev4/ao3
-wavenumber/cm-1 = 15083.0
-label = absorp
-local freq/MHz = 60.0
+daq ai = Dev2/ai3
+daq ao = Dev2/ao3
+wavenumber/cm-1 = 14598.0
+label = v21s/m
+local freq/MHz = 360.0
 freq source = local
 
