--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -23,13 +23,13 @@ baseline remove = True
 [Cavity]
 peak height/V = 0.15
 peak width/pts = 1
-kp = 35.0e-5
-kp on = False
-ki = 21.0e-3
-ki on = False
-kd = 12.0e-7
+kp = 0.00035
+kp on = True
+ki = 0.021
+ki on = True
+kd = 1.2e-06
 kd on = False
-offset/V = 0.78
+offset/V = 0.6199999999999999
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
@@ -39,11 +39,11 @@ set point/ms = 0.89
 [Laser0]
 peak height/V = 0.09
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8e-05
 kp on = False
-ki = 10.0e-3
+ki = 0.01
 ki on = False
-kd = 4.0e-7
+kd = 4e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
@@ -51,17 +51,17 @@ daq ai = Dev2/ai1
 daq ao = Dev2/ao1
 wavenumber/cm-1 = 15083.0
 label = v00m
-local freq/MHz = 550.0
+local freq/MHz = 230.0
 freq source = local
 
 [Laser1]
 peak height/V = 0.11
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8e-05
 kp on = False
-ki = 10.0e-3
+ki = 0.01
 ki on = False
-kd = 4.0e-7
+kd = 4e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
@@ -75,11 +75,11 @@ freq source = local
 [Laser2]
 peak height/V = 0.05
 peak width/pts = 1
-kp = 8.0e-5
+kp = 8e-05
 kp on = False
-ki = 10.0e-3
+ki = 0.01
 ki on = False
-kd = 4.0e-7
+kd = 4e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
