--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -29,7 +29,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.6199999999999999
+offset/V = 0.62
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
@@ -51,7 +51,7 @@ daq ai = Dev2/ai1
 daq ao = Dev2/ao1
 wavenumber/cm-1 = 15083.0
 label = v00m
-local freq/MHz = 230.0
+local freq/MHz = 750.0
 freq source = local
 
 [Laser1]
