nearest peak lock

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -24,12 +24,12 @@ baseline remove = True
 peak height/V = 0.01
 peak width/pts = 1
 kp = 0.00035
-kp on = False
+kp on = True
 ki = 0.021
-ki on = False
+ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.12
+offset/V = 0.27000000000000013
 limit/V = 0.05
 daq ai = Dev4/ai0
 daq ao = Dev4/ao0
