--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,27 +1,27 @@
 [Setting]
-scan amp/V = 5.0
+scan amp/V = 4.35
 scan time/ms = 2.5
-scan ignore/ms = 1.3
+scan ignore/ms = 0.76
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev4/ctr1
-counter PFI line = /Dev4/PFI13
-trigger channel = /Dev4/PFI8
+counter channel = Dev7/ctr1
+counter PFI line = /Dev7/PFI13
+trigger channel = /Dev7/PFI8
 # host address can be None or a valid address
-host address = 128.135.127.189
-port = 65534
+host address = 127.0.0.1
+port = 65533
 num of lasers = 3
 hdf_filename = logging\logging
-window title = Dev4-Cavity-Lock
+window title = Dev7-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.07
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -29,33 +29,33 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.27000000000000013
+offset/V = 1.05
 limit/V = 0.05
-daq ai = Dev4/ai0
-daq ao = Dev4/ao0
+daq ai = Dev7/ai0
+daq ao = Dev7/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 1.45
+set point/ms = 0.8
 
 [Laser0]
-peak height/V = 0.01
+peak height/V = 0.03
 peak width/pts = 1
 kp = 8e-05
 kp on = False
 ki = 0.01
 ki on = False
-kd = 4e-07
+kd = 9e-08
 kd on = False
-offset/V = 0.0
+offset/V = 0.15
 limit/V = 0.05
-daq ai = Dev4/ai2
-daq ao = Dev4/ao1
-wavenumber/cm-1 = 15083.0
-label = v00s
-local freq/MHz = 459.0
-freq source = local
+daq ai = Dev7/ai1
+daq ao = Dev7/ao1
+wavenumber/cm-1 = 12807.6
+label = trapping
+local freq/MHz = 360.0
+freq source = global
 
 [Laser1]
-peak height/V = 0.01
+peak height/V = 0.07
 peak width/pts = 1
 kp = 8e-05
 kp on = False
@@ -65,15 +65,15 @@ kd = 4e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev4/ai4
-daq ao = Dev4/ao2
-wavenumber/cm-1 = 14598.0
-label = v10s
+daq ai = Dev7/ai2
+daq ao = Dev7/ao2
+wavenumber/cm-1 = 12807.6
+label = repump
 local freq/MHz = 230.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.01
+peak height/V = 0.07
 peak width/pts = 1
 kp = 8e-05
 kp on = False
@@ -83,10 +83,10 @@ kd = 4e-07
 kd on = False
 offset/V = 0.0
 limit/V = 0.05
-daq ai = Dev4/ai6
-daq ao = Dev4/ao3
-wavenumber/cm-1 = 15083.0
-label = absorp
-local freq/MHz = 60.0
+daq ai = Dev7/ai3
+daq ao = Dev7/ao3
+wavenumber/cm-1 = 8631.8
+label = 1158nm
+local freq/MHz = 80.0
 freq source = local
 
