--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,7 +1,12 @@
 [Setting]
 scan amp/V = 9.0
+min cav ao/V = -2.0
+max cav ao/V = 10.0
+min laser ao/V = 0.0
+max laser ao/V = 4.0
 scan time/ms = 2.5
-scan ignore/ms = 0.76
+ramp up time/ms = 1.0
+scan ignore/ms = 1.05
 sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
@@ -21,23 +26,23 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.1
 peak width/pts = 1
 kp = 0.00035
-kp on = False
+kp on = True
 ki = 0.031000000000000003
-ki on = False
+ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.4
+offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev1/ai0
 daq ao = Dev1/ao0
 wavenumber/cm-1 = 6452.0
-set point/ms = 0.9
+set point/ms = 1.3
 
 [Laser0]
-peak height/V = 0.02
+peak height/V = 0.2
 peak width/pts = 1
 kp = -8e-05
 kp on = False
@@ -45,13 +50,13 @@ ki = -0.01
 ki on = False
 kd = -9e-08
 kd on = False
-offset/V = 0.14
+offset/V = 0.3
 limit/V = 0.05
 daq ai = Dev1/ai1
 daq ao = Dev1/ao1
 wavenumber/cm-1 = 5258.9
 label = 1901nm
-local freq/MHz = 680.0
+local freq/MHz = 120.0
 freq source = local
 
 [Laser1]
@@ -63,7 +68,7 @@ ki = 0.01
 ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.1
 limit/V = 0.05
 daq ai = Dev1/ai2
 daq ao = Dev1/ao2
