min/max ao voltage cap

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,5 +1,9 @@
 [Setting]
 scan amp/V = 4.35
+min cav ao/V = -2.0
+max cav ao/V = 6.0
+min laser ao/V = -2.0
+max laser ao/V = 2.0
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
@@ -21,7 +25,7 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.15
+peak height/V = 0.04
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -29,7 +33,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.62
+offset/V = 0.9200000000000003
 limit/V = 0.05
 daq ai = Dev2/ai0
 daq ao = Dev2/ao0
@@ -37,12 +41,12 @@ wavenumber/cm-1 = 15798.0
 set point/ms = 0.89
 
 [Laser0]
-peak height/V = 0.09
+peak height/V = 0.04
 peak width/pts = 1
 kp = 8e-05
-kp on = False
+kp on = True
 ki = 0.01
-ki on = False
+ki on = True
 kd = 4e-07
 kd on = False
 offset/V = 0.0
@@ -51,34 +55,34 @@ daq ai = Dev2/ai1
 daq ao = Dev2/ao1
 wavenumber/cm-1 = 15083.0
 label = v00m
-local freq/MHz = 750.0
+local freq/MHz = 620.0
 freq source = local
 
 [Laser1]
-peak height/V = 0.11
+peak height/V = 0.04
 peak width/pts = 1
 kp = 8e-05
-kp on = False
+kp on = True
 ki = 0.01
-ki on = False
+ki on = True
 kd = 4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.4999999999999999
 limit/V = 0.05
 daq ai = Dev2/ai2
 daq ao = Dev2/ao2
 wavenumber/cm-1 = 14598.0
 label = v10m
-local freq/MHz = 660.0
+local freq/MHz = 440.0
 freq source = local
 
 [Laser2]
 peak height/V = 0.05
 peak width/pts = 1
 kp = 8e-05
-kp on = False
+kp on = True
 ki = 0.01
-ki on = False
+ki on = True
 kd = 4e-07
 kd on = False
 offset/V = 0.0
@@ -87,6 +91,6 @@ daq ai = Dev2/ai3
 daq ao = Dev2/ao3
 wavenumber/cm-1 = 14598.0
 label = v21s/m
-local freq/MHz = 360.0
+local freq/MHz = 430.0
 freq source = local
 
