min/max ao voltage cap

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,5 +1,9 @@
 [Setting]
 scan amp/V = 4.35
+min cav ao/V = -2.0
+max cav ao/V = 6.0
+min laser ao/V = -2.0
+max laser ao/V = 2.0
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
@@ -29,7 +33,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = -0.04
+offset/V = 0.36
 limit/V = 0.05
 daq ai = Dev3/ai0
 daq ao = Dev3/ao0
@@ -37,7 +41,7 @@ wavenumber/cm-1 = 15798.0
 set point/ms = 0.9
 
 [Laser0]
-peak height/V = 0.15
+peak height/V = 0.04
 peak width/pts = 1
 kp = 8e-05
 kp on = False
@@ -51,16 +55,16 @@ daq ai = Dev3/ai1
 daq ao = Dev3/ao1
 wavenumber/cm-1 = 15007.6
 label = v00N3
-local freq/MHz = 229.5
+local freq/MHz = 380.5
 freq source = local
 
 [Laser1]
-peak height/V = 0.05
+peak height/V = 0.02
 peak width/pts = 1
 kp = 8e-05
-kp on = False
+kp on = True
 ki = 0.01
-ki on = False
+ki on = True
 kd = 4e-07
 kd on = False
 offset/V = 0.0
@@ -69,7 +73,7 @@ daq ai = Dev3/ai2
 daq ao = Dev3/ao2
 wavenumber/cm-1 = 14598.0
 label = v32m
-local freq/MHz = 270.0
+local freq/MHz = 430.0
 freq source = local
 
 [Laser2]
