--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,7 +1,11 @@
 [Setting]
 scan amp/V = 5.0
+min cav ao/V = -2.0
+max cav ao/V = 6.0
+min laser ao/V = -2.0
+max laser ao/V = 2.0
 scan time/ms = 2.5
-scan ignore/ms = 1.3
+scan ignore/ms = 1.28
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
@@ -29,7 +33,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.27000000000000013
+offset/V = 0.5800000000000001
 limit/V = 0.05
 daq ai = Dev4/ai0
 daq ao = Dev4/ao0
@@ -51,7 +55,7 @@ daq ai = Dev4/ai2
 daq ao = Dev4/ao1
 wavenumber/cm-1 = 15083.0
 label = v00s
-local freq/MHz = 459.0
+local freq/MHz = 430.0
 freq source = local
 
 [Laser1]
@@ -69,7 +73,7 @@ daq ai = Dev4/ai4
 daq ao = Dev4/ao2
 wavenumber/cm-1 = 14598.0
 label = v10s
-local freq/MHz = 230.0
+local freq/MHz = 280.0
 freq source = local
 
 [Laser2]
@@ -87,6 +91,6 @@ daq ai = Dev4/ai6
 daq ao = Dev4/ao3
 wavenumber/cm-1 = 15083.0
 label = absorp
-local freq/MHz = 60.0
+local freq/MHz = 70.0
 freq source = local
 
