min/max ao voltage cap

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,7 +1,11 @@
 [Setting]
 scan amp/V = 4.35
+min cav ao/V = -2.0
+max cav ao/V = 6.0
+min laser ao/V = -2.0
+max laser ao/V = 2.0
 scan time/ms = 2.5
-scan ignore/ms = 0.76
+scan ignore/ms = 0.45
 sampling rate = 384000
 cavity FSR/MHz = 500.0
 lock criteria/MHz = 5.0
@@ -29,7 +33,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 1.05
+offset/V = -0.02
 limit/V = 0.05
 daq ai = Dev7/ai0
 daq ao = Dev7/ao0
@@ -63,7 +67,7 @@ ki = 0.01
 ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.10000000000000009
 limit/V = 0.05
 daq ai = Dev7/ai2
 daq ao = Dev7/ao2
@@ -81,7 +85,7 @@ ki = 0.01
 ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.4
 limit/V = 0.05
 daq ai = Dev7/ai3
 daq ao = Dev7/ao3
