min/max ao voltage cap

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,5 +1,9 @@
 [Setting]
 scan amp/V = 4.35
+min cav ao/V = -2.0
+max cav ao/V = 6.0
+min laser ao/V = 0.0
+max laser ao/V = 4.0
 scan time/ms = 2.5
 scan ignore/ms = 0.76
 sampling rate = 384000
@@ -21,15 +25,15 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.009999999999999997
+peak height/V = 0.01
 peak width/pts = 1
 kp = 0.00035
-kp on = True
+kp on = False
 ki = 0.031000000000000003
-ki on = True
+ki on = False
 kd = 1.2e-06
 kd on = False
-offset/V = 0.4
+offset/V = 0.19999999999999993
 limit/V = 0.05
 daq ai = Dev8/ai0
 daq ao = Dev8/ao0
@@ -51,7 +55,7 @@ daq ai = Dev8/ai1
 daq ao = Dev8/ao1
 wavenumber/cm-1 = 9816.8
 label = 1018nm
-local freq/MHz = 680.0
+local freq/MHz = 520.0
 freq source = local
 
 [Laser1]
