--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -33,20 +33,20 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = -0.02
+offset/V = 0.88
 limit/V = 0.05
 daq ai = Dev7/ai0
 daq ao = Dev7/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.8
+set point/ms = 0.55
 
 [Laser0]
 peak height/V = 0.03
 peak width/pts = 1
 kp = 8e-05
-kp on = False
+kp on = True
 ki = 0.01
-ki on = False
+ki on = True
 kd = 9e-08
 kd on = False
 offset/V = 0.15
@@ -55,7 +55,7 @@ daq ai = Dev7/ai1
 daq ao = Dev7/ao1
 wavenumber/cm-1 = 12807.6
 label = trapping
-local freq/MHz = 360.0
+local freq/MHz = 550.0
 freq source = global
 
 [Laser1]
@@ -67,7 +67,7 @@ ki = 0.01
 ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.10000000000000009
+offset/V = 0.1
 limit/V = 0.05
 daq ai = Dev7/ai2
 daq ao = Dev7/ao2
