--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,31 +1,31 @@
 [Setting]
-scan amp/V = 4.35
+scan amp/V = 7.0
 min cav ao/V = -2.0
-max cav ao/V = 6.0
+max cav ao/V = 9.0
 min laser ao/V = -2.0
-max laser ao/V = 2.0
+max laser ao/V = 3.0
 scan time/ms = 2.5
-scan ignore/ms = 0.45
-sampling rate = 384000
-cavity FSR/MHz = 500.0
+scan ignore/ms = 0.8
+sampling rate = 512000
+cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
 RMS length = 100
 display per = 20
-counter channel = Dev7/ctr1
-counter PFI line = /Dev7/PFI13
-trigger channel = /Dev7/PFI8
+counter channel = Dev3/ctr1
+counter PFI line = /Dev3/PFI13
+trigger channel = /Dev3/PFI8
 # host address can be None or a valid address
 host address = 127.0.0.1
-port = 65533
-num of lasers = 3
+port = 65530
+num of lasers = 1
 hdf_filename = logging\logging
-window title = Dev7-Cavity-Lock
+window title = Dev3-Cavity-Lock
 color list = #c65027, #008080, #8e8538
 average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.07
+peak height/V = 0.02
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -33,64 +33,28 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.88
+offset/V = 0.18
 limit/V = 0.05
-daq ai = Dev7/ai0
-daq ao = Dev7/ao0
+daq ai = Dev3/ai0
+daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 0.55
+set point/ms = 1.17
 
 [Laser0]
-peak height/V = 0.03
+peak height/V = 0.08
 peak width/pts = 1
-kp = 8e-05
-kp on = True
-ki = 0.01
-ki on = True
+kp = 9e-05
+kp on = False
+ki = 0.0014000000000000002
+ki on = False
 kd = 9e-08
 kd on = False
-offset/V = 0.15
+offset/V = 0.12
 limit/V = 0.05
-daq ai = Dev7/ai1
-daq ao = Dev7/ao1
-wavenumber/cm-1 = 12807.6
-label = trapping
-local freq/MHz = 550.0
-freq source = global
-
-[Laser1]
-peak height/V = 0.07
-peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
-kd on = False
-offset/V = 0.1
-limit/V = 0.05
-daq ai = Dev7/ai2
-daq ao = Dev7/ao2
-wavenumber/cm-1 = 12807.6
-label = repump
-local freq/MHz = 230.0
-freq source = local
-
-[Laser2]
-peak height/V = 0.07
-peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
-kd on = False
-offset/V = 0.4
-limit/V = 0.05
-daq ai = Dev7/ai3
-daq ao = Dev7/ao3
-wavenumber/cm-1 = 8631.8
-label = 1158nm
-local freq/MHz = 80.0
+daq ai = Dev3/ai1
+daq ao = Dev3/ao1
+wavenumber/cm-1 = 21698.6
+label = Sr 461
+local freq/MHz = 200.0
 freq source = local
 
