--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,12 +1,12 @@
 [Setting]
-scan amp/V = 9.0
+scan amp/V = 4.75
 min cav ao/V = -2.0
 max cav ao/V = 10.0
 min laser ao/V = 0.0
 max laser ao/V = 4.0
 scan time/ms = 2.5
 ramp up time/ms = 1.0
-scan ignore/ms = 1.05
+scan ignore/ms = 1.7600000000000005
 sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
@@ -30,24 +30,24 @@ peak height/V = 0.1
 peak width/pts = 1
 kp = 0.00035
 kp on = True
-ki = 0.031000000000000003
+ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
 offset/V = 0.0
-limit/V = 0.05
+limit/V = 0.04
 daq ai = Dev1/ai0
 daq ao = Dev1/ao0
 wavenumber/cm-1 = 6452.0
-set point/ms = 1.3
+set point/ms = 1.9000000000000001
 
 [Laser0]
 peak height/V = 0.2
 peak width/pts = 1
 kp = -8e-05
-kp on = False
+kp on = True
 ki = -0.01
-ki on = False
+ki on = True
 kd = -9e-08
 kd on = False
 offset/V = 0.3
@@ -56,24 +56,24 @@ daq ai = Dev1/ai1
 daq ao = Dev1/ao1
 wavenumber/cm-1 = 5258.9
 label = 1901nm
-local freq/MHz = 120.0
+local freq/MHz = 170.0
 freq source = local
 
 [Laser1]
-peak height/V = 0.07
+peak height/V = 0.2
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp = -8e-05
+kp on = True
+ki = -0.01
+ki on = True
+kd = -0.0005
 kd on = False
-offset/V = 0.1
+offset/V = 0.0
 limit/V = 0.05
 daq ai = Dev1/ai2
 daq ao = Dev1/ao2
 wavenumber/cm-1 = 5208.0
 label = 1920nm
-local freq/MHz = 230.0
+local freq/MHz = 270.0
 freq source = local
 
