--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -33,7 +33,7 @@ ki = 0.031000000000000003
 ki on = False
 kd = 1.2e-06
 kd on = False
-offset/V = 0.19999999999999993
+offset/V = 0.2
 limit/V = 0.05
 daq ai = Dev8/ai0
 daq ao = Dev8/ao0
