--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -25,15 +25,15 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.008
 peak width/pts = 1
-kp = 0.00035
-kp on = False
+kp = 0.0001
+kp on = True
 ki = 0.031000000000000003
-ki on = False
+ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.2
+offset/V = 0.8
 limit/V = 0.05
 daq ai = Dev8/ai0
 daq ao = Dev8/ao0
@@ -41,56 +41,56 @@ wavenumber/cm-1 = 15798.0
 set point/ms = 0.9
 
 [Laser0]
-peak height/V = 0.02
+peak height/V = 0.015
 peak width/pts = 1
 kp = -8e-05
-kp on = False
+kp on = True
 ki = -0.01
-ki on = False
+ki on = True
 kd = -9e-08
 kd on = False
-offset/V = 0.14
+offset/V = 1.6899999999999997
 limit/V = 0.05
 daq ai = Dev8/ai1
 daq ao = Dev8/ao1
 wavenumber/cm-1 = 9816.8
 label = 1018nm
-local freq/MHz = 520.0
+local freq/MHz = 370.0
 freq source = local
 
 [Laser1]
-peak height/V = 0.07
+peak height/V = 0.015
 peak width/pts = 1
-kp = 8e-05
-kp on = False
-ki = 0.01
-ki on = False
-kd = 4e-07
+kp = -8e-05
+kp on = True
+ki = -0.01
+ki on = True
+kd = -4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.4500000000000002
 limit/V = 0.05
 daq ai = Dev8/ai2
 daq ao = Dev8/ao2
 wavenumber/cm-1 = 9372.0
 label = 1067nm
-local freq/MHz = 230.0
+local freq/MHz = 651.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.07
+peak height/V = 0.009999999999999998
 peak width/pts = 1
-kp = 8e-05
+kp = 5e-05
 kp on = False
 ki = 0.01
 ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.0
+offset/V = 0.41
 limit/V = 0.05
 daq ai = Dev8/ai3
 daq ao = Dev8/ao3
 wavenumber/cm-1 = 15007.6
 label = v00N3
-local freq/MHz = 80.0
+local freq/MHz = 410.0
 freq source = local
 
