--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -6,7 +6,7 @@ min laser ao/V = 0.0
 max laser ao/V = 4.0
 scan time/ms = 2.5
 ramp up time/ms = 1.0
-scan ignore/ms = 1.7600000000000005
+scan ignore/ms = 1.76
 sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
@@ -26,7 +26,7 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.1
+peak height/V = 0.08
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -34,46 +34,46 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.0
+offset/V = 1.7000000000000002
 limit/V = 0.04
 daq ai = Dev1/ai0
 daq ao = Dev1/ao0
 wavenumber/cm-1 = 6452.0
-set point/ms = 1.9000000000000001
+set point/ms = 1.9
 
 [Laser0]
 peak height/V = 0.2
 peak width/pts = 1
 kp = -8e-05
-kp on = True
+kp on = False
 ki = -0.01
-ki on = True
+ki on = False
 kd = -9e-08
 kd on = False
-offset/V = 0.3
+offset/V = 1.1400000000000001
 limit/V = 0.05
 daq ai = Dev1/ai1
 daq ao = Dev1/ao1
 wavenumber/cm-1 = 5258.9
 label = 1901nm
-local freq/MHz = 170.0
+local freq/MHz = 550.0
 freq source = local
 
 [Laser1]
 peak height/V = 0.2
 peak width/pts = 1
 kp = -8e-05
-kp on = True
+kp on = False
 ki = -0.01
-ki on = True
+ki on = False
 kd = -0.0005
 kd on = False
-offset/V = 0.0
+offset/V = 0.5
 limit/V = 0.05
 daq ai = Dev1/ai2
 daq ao = Dev1/ao2
 wavenumber/cm-1 = 5208.0
 label = 1920nm
-local freq/MHz = 270.0
+local freq/MHz = 170.0
 freq source = local
 
