--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 __pycache__/
-widgets/__pycache__/*
+widgets/__pycache__/
 test.py
 saved_settings/*
-logging/*
+logging/
+data_logging/
+system_logging/
 
 !saved_settings/config_latest.ini
-!saved_settings/cavity_lock_setting.ini
+!saved_settings/cavity_lock_setting_example.ini
 !logging/ReadMe.txt
+
+build/
+dist/
+
+*.spec
+*.Lnk
