add paths to pyinstaller

--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -6,7 +6,7 @@ min laser ao/V = 0.0
 max laser ao/V = 4.0
 scan time/ms = 2.5
 scan ignore/ms = 0.76
-sampling rate = 60000
+sampling rate = 384000
 max sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
@@ -29,9 +29,9 @@ baseline remove = True
 peak height/V = 0.008
 peak width/pts = 1
 kp = 0.0001
-kp on = False
+kp on = True
 ki = 0.031000000000000003
-ki on = False
+ki on = True
 kd = 1.2e-06
 kd on = False
 offset/V = 0.8
@@ -45,9 +45,9 @@ set point/ms = 0.9
 peak height/V = 0.015
 peak width/pts = 1
 kp = -8e-05
-kp on = False
+kp on = True
 ki = -0.01
-ki on = False
+ki on = True
 kd = -9e-08
 kd on = False
 offset/V = 1.69
@@ -56,29 +56,29 @@ daq ai = Dev8/ai1
 daq ao = Dev8/ao1
 wavenumber/cm-1 = 9816.8
 label = 1018nm
-local freq/MHz = 370.0
+local freq/MHz = 81.2
 freq source = local
 
 [Laser1]
 peak height/V = 0.015
 peak width/pts = 1
 kp = -8e-05
-kp on = False
+kp on = True
 ki = -0.01
-ki on = False
+ki on = True
 kd = -4e-07
 kd on = False
-offset/V = 0.45
+offset/V = 0.73
 limit/V = 0.05
 daq ai = Dev8/ai2
 daq ao = Dev8/ao2
 wavenumber/cm-1 = 9372.0
 label = 1067nm
-local freq/MHz = 651.0
+local freq/MHz = 529.0
 freq source = local
 
 [Laser2]
-peak height/V = 0.01
+peak height/V = 0.11
 peak width/pts = 1
 kp = 5e-05
 kp on = False
