--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -1,12 +1,12 @@
 [Setting]
-scan amp/V = 7.0
+scan amp/V = 8.0
 min cav ao/V = -2.0
 max cav ao/V = 9.0
 min laser ao/V = -2.0
 max laser ao/V = 3.0
 scan time/ms = 2.5
-scan ignore/ms = 0.8
-sampling rate = 512000
+scan ignore/ms = 1.1
+sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
 RMS length = 100
@@ -25,7 +25,7 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.02
+peak height/V = 0.01
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -38,15 +38,15 @@ limit/V = 0.05
 daq ai = Dev3/ai0
 daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 1.17
+set point/ms = 1.2
 
 [Laser0]
-peak height/V = 0.08
+peak height/V = 0.009999999999999997
 peak width/pts = 1
 kp = 9e-05
-kp on = False
+kp on = True
 ki = 0.0014000000000000002
-ki on = False
+ki on = True
 kd = 9e-08
 kd on = False
 offset/V = 0.12
@@ -55,6 +55,6 @@ daq ai = Dev3/ai1
 daq ao = Dev3/ao1
 wavenumber/cm-1 = 21698.6
 label = Sr 461
-local freq/MHz = 200.0
+local freq/MHz = 860.0
 freq source = local
 
