--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -34,7 +34,7 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 1.7000000000000002
+offset/V = 1.9
 limit/V = 0.04
 daq ai = Dev1/ai0
 daq ao = Dev1/ao0
@@ -50,13 +50,13 @@ ki = -0.01
 ki on = False
 kd = -9e-08
 kd on = False
-offset/V = 1.1400000000000001
+offset/V = 0.99
 limit/V = 0.05
 daq ai = Dev1/ai1
 daq ao = Dev1/ao1
 wavenumber/cm-1 = 5258.9
 label = 1901nm
-local freq/MHz = 550.0
+local freq/MHz = 110.0
 freq source = local
 
 [Laser1]
@@ -74,6 +74,6 @@ daq ai = Dev1/ai2
 daq ao = Dev1/ao2
 wavenumber/cm-1 = 5208.0
 label = 1920nm
-local freq/MHz = 170.0
+local freq/MHz = 0.0
 freq source = local
 
