--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -80,17 +80,17 @@ freq source = local
 peak height/V = 0.07
 peak width/pts = 1
 kp = 8e-05
-kp on = True
+kp on = False
 ki = 0.01
-ki on = True
+ki on = False
 kd = 4e-07
 kd on = False
-offset/V = 0.54
+offset/V = 0.25
 limit/V = 0.05
 daq ai = Dev7/ai3
 daq ao = Dev7/ao3
 wavenumber/cm-1 = 8631.8
 label = 1158nm
-local freq/MHz = 380.0
+local freq/MHz = 381.0
 freq source = local
 
